@@ -175,7 +175,6 @@ The system uses specific WAV files in `/system/` for feedback:
 *   **Dial logic:** Implement multi-digit dialing to set longer timers and alarms.
 *   **Dial logic:** Implement phone book for special functionalities such as `voice menu` and a number to call Gemini chat bot or time announcement 
 *   **Dial TTS voice Menu:** Implement a classic `dial a number` menu to turn on/off services such as alarms or to enable/disable snooze or to change the ringtone and other basic functions.
-*   **Snooze functionality:** Implement `put handset aside for snooze` option. Snooze time should be selectable in the Webinterface.
 *   **Main Code:** AGC for mic and, if possible, AEC for Gemini AI usage
 
 ## Maintenance
